--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     color: #a653ff;
     background-attachment: fixed;
     background-size: cover;
-    background-image: url(lana Del rey.png);
+    background-image: url(lana_Del_rey.png);
     animation:fundomechendo 40s infinite linear;
 }
 
@@ -21,7 +21,7 @@ body {
 margin-left: auto;
 margin-right: auto;
     border: 5px double #7b2ecd;
-    background-color: transparent;
+    background-color: #d4abff;
     color: white;
     box-shadow: 0px 0px 15px 0px #7b2ecd;
     font-size: 1vw;
@@ -42,12 +42,15 @@ margin-right: auto;
     display: inline-block;
     width: 50%;
     overflow: auto;
-  background-color: transparent;
+  background-color: #d4abff;
     padding: 2%;
     border: 2px solid  #7b2ecd;
     color: #1f0000;
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px #891bff;
+    h3{
+        margin-top: 13%;
+    }
 }
 
 .img2 {
@@ -64,12 +67,12 @@ margin-right: auto;
     width: 50%;
     padding: 2%;
     margin-top: 2%;
-    background-color: transparent;
+    background-color: #d4abff;
     margin-left: 22.5%;
     border-radius: 8px;
-    border: 2px solid#c085ff;
+    border: 2px solid#ffcc00;
     color: #1f0000;
-    box-shadow: 0px 0px 10px 0px #d4abff;
+    box-shadow: 0px 0px 10px 0px #ffcc00;
 }
 
 .listalink {
@@ -80,25 +83,26 @@ margin-right: auto;
     margin-top: 2%;
     padding: 2%;
     padding-bottom: 3%;
-    border: 2px dotted #5810a6;
+    border: 2px dotted #ffcc00;
     border-radius: 8px;
-    background-color: transparent;
+    background-color: #d4abff;
     color: #1f0000;
-    box-shadow: 0px 0px 10px 0px hsl(269, 100%, 64%);
+    box-shadow: 0px 0px 10px 0px #ffcc00;
 }
 
-.promocoes {
+.Shows {
     text-align: center;
     font-size: 1vw;
     padding: 2%;
+    padding-top: 6%;
     display: inline-block;
     width: 18%;
     padding-bottom: 4%;
-    border: 2px dotted #d3aaff;
+    border: 2px dotted #ffcc00;
     border-radius: 8px;
-    background-color: transparent;
+    background-color: #d4abff;
     color: #1f0000;
-    box-shadow: 0px 0px 10px 0px #7b2ecd;
+    box-shadow: 0px 0px 10px 0px #ffcc00;
 }
 
 ol {
@@ -108,7 +112,7 @@ ol {
 .contato {
     border: 2px solid #380074;
     text-align: center;
-    background-color: transparent;
+    background-color: #d4abff;
     color: #1f0000;
     padding: 10px;
     box-shadow: 0px 0px 10px 0px #7b00ff;
@@ -141,7 +145,7 @@ a {
     color: white;
     padding: 0.1%;
     text-align: center;
-  background-color: transparent;
+  background-color: #d4abff;
     margin-left: auto;
     margin-right: auto;
 }
@@ -159,7 +163,7 @@ a {
     border-radius: 50px;
     border: 2px solid #7b2ecd;
     background-color: #7b2ecd;
-  background-color: transparent;
+  background-color: #d4abff;
     color: #ffffff;
     box-shadow: 0px 0px 10px 5px #7b2ecd;
 }
